Fixed makefile and minified slides.js

--- a/h5s/Makefile
+++ b/h5s/Makefile
@@ -1,6 +1,15 @@
 all: js
 
-include ../../Makefile
+JS:=$(shell ls *.js | grep -v min.js | perl -pe 's/.js/.min.js/')
+
+js : $(JS)
+
+%.min.js : %.js
+	@rm -f $@
+	java -jar ~/bin/compiler.jar \
+	    --compilation_level SIMPLE_OPTIMIZATIONS \
+	    --js $< \
+	    --js_output_file $@
 
 
 
